[gd_scene load_steps=7 format=2]

[ext_resource path="res://Src/Autoloads/Dbg/Dbg.gd" type="Script" id=1]
[ext_resource path="res://Src/Autoloads/Dbg/DbgStats.gd" type="Script" id=2]
[ext_resource path="res://Src/Autoloads/Dbg/DbgDraw.gd" type="Script" id=3]
[ext_resource path="res://Src/Autoloads/Dbg/DbgCamera/DbgCamera.gd" type="Script" id=4]
[ext_resource path="res://Src/Autoloads/Dbg/DbgConsole/DbgConsole.tscn" type="PackedScene" id=5]
[ext_resource path="res://Src/Autoloads/Dbg/DbgCamera/DbgCamera.tscn" type="PackedScene" id=6]

[node name="DebugOverlay" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 1 )

[node name="DbgDraw" type="Control" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DbgStats" type="Control" parent="."]
margin_left = 10.0
margin_top = 10.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DbgStats"]
margin_right = 74.0
margin_bottom = 14.0
text = "debug stats"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DbgCamera" type="Control" parent="."]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
DebugCamera3D = ExtResource( 6 )

[node name="DbgConsole" parent="." instance=ExtResource( 5 )]
